<resources>
    <string name="gastrosan">GastroSan</string>
    <string name="iniciar_sesion_con_huella"><u>Iniciar sesión con Huella</u></string>
    <string name="contraseña">Contraseña</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="iniciar_sesiOn">INICIAR SESIÓN</string>
    <string name="aun_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="passwd_error_message">La contraseña debe tener al menos 7 caracteres</string>
    <string name="email_error_message">El email introducido no es válido</string>
    <string name="message_wait">Por favor, espera mientras comprobamos tus credenciales</string>
    <string name="cree_una_cuenta_nueva">Rellene los campos para crear una nueva cuenta</string>
    <string name="nombre_del_establecimiento">Nombre del Establecimiento</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="ya_tiene_una_cuenta">¿Ya tiene una cuenta?</string>
    <string name="iniciar_sesi_n"><u>Iniciar Sesión</u></string>
    <string name="account_created">La cuenta se ha registrado correctamente</string>
    <string name="username_error">Debes introducir un usuario válido</string>
    <string name="registration">Registro</string>
    <string name="success_registration">Registro Exitoso</string>
    <string name="loggeidIn_message">Inicio de Sesión Exitoso</string>
    <string name="wrong_credentials">Los credenciales son incorrectos</string>
    <string name="default_web_client_id">128146827599-4am253qsmsu9bo2m9d750nvem0rn2feh.apps.googleusercontent.com</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="supplier_since">Proveedor desde</string>
    <string name="underlined_text"><u>Ver Factura</u></string>
    <string name="cerrar_sesi_n"><u>Cerrar Sesión</u></string>
    <string name="perfil">Perfil</string>
    <string name="a_adir_proveedor">AÑADIR PROVEEDOR</string>
    <string name="nombre_del_proveedor">Nombre del Proveedor</string>
    <string name="nombre_persona_de_contacto">Nombre Persona de Contacto</string>
    <string name="tel_fono_de_contacto">Teléfono de Contacto</string>
    <string name="guardar_proveedor">Guardar Proveedor</string>
    <string name="logo_gastrosan">Logo Gastrosan</string>
    <string name="icono_perfil">Icono Perfil</string>
    <string name="art_culo">Artículo</string>
    <string name="cantidad">Cantidad</string>
    <string name="n_lote">Nº Lote</string>
    <string name="pvp">PVP</string>
    <string name="importe">Importe</string>
    <string name="total_0_00">Total: 0,00€</string>
    <string name="actualmente_la_tabla_de_art_culos_est_vac_a">Actualmente la tabla de artículos está vacía</string>
    <string name="a_adir_datos">Añadir Datos</string>
    <string name="descargar_pdf">Descargar PDF</string>
    <string name="eliminar_filas">Eliminar Filas</string>
    <string name="confirmar_eliminaci_n">Confirmar Eliminación</string>
    <string name="eliminar_factura">Eliminar Factura</string>
    <string name="mostrar_contrase_a">Mostrar Contraseña</string>
    <string name="inicio_de_sesi_n_con_google">Inicio de sesión con Google</string>
    <string name="aqui_el_menu">AQUI EL MENU</string>
    <string name="logo_gastrosan2">Logo Gastrosan</string>
    <string name="icono_perfil2">Icono Perfil</string>
    <string name="nombre_restaurante">Nombre Restaurante</string>
    <string name="nombre_restaurante2">Nombre Restaurante</string>
    <string name="nombre_restaurante3">Nombre Restaurante</string>
    <string name="c_ejemplo_47_1">C/Ejemplo 47, 1º</string>
    <string name="direcci_n_del_restaurante">Dirección del restaurante</string>
    <string name="c_ejemplo_47_12">C/Ejemplo 47, 1º</string>
    <string name="direcci_n_del_restaurante2">Dirección del restaurante</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="correo_electr_nico2">Correo Electrónico</string>
    <string name="n_de_tel_fono">Nº de teléfono</string>
    <string name="_34_000_00_00_00">+34 000 00 00 00</string>
    <string name="_34_000_00_00_002">+34 000 00 00 00</string>
    <string name="n_de_tel_fono2">Nº de teléfono</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="mostrar_contrase_a_s">Mostrar Contraseña(s)</string>
    <string name="confirmar_cambios">Confirmar cambios</string>
    <string name="confirmar_cambios2">Confirmar cambios</string>
    <string name="logo_gastrosan4">Logo Gastrosan</string>
    <string name="icono_perfil3">Icono Perfil</string>
    <string name="nombre_del_proveedor2">Nombre del Proveedor</string>
    <string name="nombre_del_proveedor3">Nombre del Proveedor</string>
    <string name="proveedor_desde">Proveedor desde...</string>
    <string name="nombre_de_contacto">Nombre de contacto :</string>
    <string name="nombre_de_contacto2">Nombre de contacto :</string>
    <string name="tel_fono_de_contacto2">Teléfono de contacto</string>
    <string name="tel_fono_de_contacto3">Teléfono de contacto</string>
    <string name="este_proveedor_no_tiene_ninguna_factura_almacenada">Este proveedor no tiene ninguna factura almacenada.</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_proveedor">Eliminar Proveedor</string>
    <string name="confirmar_cambios4">Confirmar Cambios</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad2">Cantidad</string>
    <string name="n_lote2">Nº Lote</string>
    <string name="pvp2">PVP</string>
    <string name="nombre2">Nombre</string>
    <string name="importe2">Importe</string>
    <string name="cerrar_ventana">Cerrar Ventana</string>
    <string name="ver_detalles">VER DETALLES</string>
    <string name="cerrar_ventana2">Cerrar Ventana</string>
    <string name="a_adir_proveedor2">AÑADIR PROVEEDOR</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="selecciona_un_proveedor">SELECCIONA UN PROVEEDOR</string>
    <string name="rotar">Rotar</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="guardar">GUARDAR</string>
    <string name="lista_de_proveedores">LISTA DE PROVEEDORES</string>
    <string name="vaya_actualmente_no_tienes_ning_n_proveedor_asociado_a_tu_restaurante_puedes_empezar_a_adiendo_alguno">¡Vaya! Actualmente no tienes ningún Proveedor asociado a tu restaurante. Puedes empezar añadiendo alguno.</string>
    <string name="cancelar2">Cancelar</string>
    <string name="eliminar2">Eliminar</string>
    <string name="bienvenido_a_gastrosan">¡Bienvenido a GastroSan!</string>
    <string name="proveedor">Proveedor</string>
    <string name="proveedores">Proveedores</string>
    <string name="perfil2">Perfil</string>
    <string name="perfil3">Perfil</string>
    <string name="factura">Factura</string>
    <string name="a_adir_factura">Añadir Factura</string>
    <string name="a_adir_proveedor3">Añadir Proveedor</string>
    <string name="a_adir_proveedor4">Añadir Proveedor</string>
    <string name="fecha">Fecha</string>
    <string name="cargando">Cargando...</string>
    <string name="c_mara">Cámara</string>
    <string name="proveedores3">Proveedores</string>
    <string name="perfil5">Perfil</string>
    <string name="español">Castellano</string>
    <string name="català">Catalán</string>
    <string name="euskara">Euskera</string>
    <string name="english">Inglés</string>
    <string name="selecciona_el_idioma">Selecciona el Idioma</string>
    <string name="qu_deseas_a_adir">¿Qué deseas añadir?</string>
    <string name="art_culos">Artículos</string>
    <string name="costes_extras_iva_otros_gastos">Costes Extras (IVA, Otros gastos...)</string>
    <string name="a_adir">Añadir</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="cantidad_inv_lida">Cantidad inválida</string>
    <string name="formato_de_precio_inv_lido">Formato de precio inválido</string>
    <string name="esperando_la_carga_del_logo_del_proveedor">Esperando la carga del logo del proveedor...</string>
    <string name="confirmar_eliminaci_n2">Confirmar eliminación</string>
    <string name="est_s_seguro_de_que_deseas_eliminar_fila_s">¿Estás seguro de que deseas eliminar %1$s fila(s)?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="por_favor_selecciona_al_menos_una_fila_para_eliminar">Por favor, selecciona al menos una fila para eliminar.</string>
    <string name="confirmar_eliminaci_n4">Confirmar eliminación</string>
    <string name="est_s_seguro_de_que_deseas_eliminar_esta_factura">¿Estás seguro de que deseas eliminar esta factura?</string>
    <string name="eliminar3">Eliminar</string>
    <string name="factura_eliminada_correctamente">Factura eliminada correctamente</string>
    <string name="error_al_eliminar_la_factura">Error al eliminar la factura</string>
    <string name="usuario_no_autenticado">Usuario no autenticado</string>
    <string name="a_adir2">Añadir</string>
    <string name="campo_obligatorio2">Campo obligatorio</string>
    <string name="el_importe_debe_ser_un_n_mero_v_lido_y_mayor_que_0">El importe debe ser un número válido y mayor que 0</string>
    <string name="total">Total: %1$s€</string>
    <string name="error_al_a_adir_art_culo">Error al añadir artículo.</string>
    <string name="error_al_a_adir_coste_extra">Error al añadir coste extra.</string>
    <string name="elemento_eliminado_correctamente">Elemento eliminado correctamente.</string>
    <string name="error_al_eliminar_elemento">Error al eliminar elemento.</string>
    <string name="distribuidor_factura_subida_a_gastrosan_el">Distribuidor: %1$s\nFactura subida a GastroSan el %2$s</string>
    <string name="pdf_guardado_en_downloads">PDF guardado en Downloads</string>
    <string name="no_se_pudo_crear_el_archivo_pdf">No se pudo crear el archivo PDF</string>
    <string name="error_al_crear_pdf">Error al crear PDF: %1$s</string>
    <string name="logo_url_no_encontrado">Logo URL no encontrado</string>
    <string name="error_al_cargar_el_logo">Error al cargar el logo: %1$s</string>
    <string name="art_culo2">Artículo</string>
    <string name="permisos_necesarios">Permisos Necesarios</string>
    <string name="esta_aplicaci_n_necesita_permisos_para_continuar_puedes_otorgarlos_en_ajustes">Esta aplicación necesita permisos para continuar. Puedes otorgarlos en Ajustes.</string>
    <string name="ir_a_ajustes">Ir a Ajustes</string>
    <string name="proveedor_seleccionado">Proveedor seleccionado: %1$s</string>
    <string name="por_favor_marca_el_checkbox_correspondiente">Por favor, marca el checkbox correspondiente</string>
    <string name="failed_to_start_camera">No se ha podido iniciar la cámara: %1$s</string>
    <string name="error_al_crear_el_archivo_de_imagen">Error al crear el archivo de imagen: %1$s</string>
    <string name="debes_seleccionar_un_proveedor_o_a_adir_uno_nuevo">Debes seleccionar un proveedor o añadir uno nuevo</string>
    <string name="error_al_subir_imagen">Error al subir imagen: %1$s</string>
    <string name="guardando_imagen">Guardando imagen...</string>
    <string name="la_imagen_se_ha_guardado_correctamente">La imagen se ha guardado correctamente.</string>
    <string name="la_imagen_no_ha_podido_guardarse_por_favor_intentalo_de_nuevo">La imagen no ha podido guardarse, por favor intentalo de nuevo.</string>
    <string name="los_datos_a_n_no_est_n_cargados_por_favor_espere">Los datos aún no están cargados, por favor espere.</string>
</resources>