<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activities.RegisterActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/lobster"
        android:text="@string/gastrosan"
        android:textAlignment="center"
        android:textColor="@color/Orange"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cree_una_cuenta_nueva"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/nombre_del_establecimiento"
        android:textColor="@color/white"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/correo_electronico"
        android:textColor="@color/white"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="13dp"
        android:ems="15"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_percent=".8"
        android:drawableRight="@drawable/eye_white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="log_inC"
        android:padding="14dp"
        android:text="@string/crear_cuenta"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwd"
        app:layout_constraintVertical_bias="0.315"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ya_tiene_una_cuenta"
        android:textAlignment="center"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:text="@string/iniciar_sesi_n"
        android:textAlignment="center"
        android:textColor="@color/IndianRed"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.097" />


</androidx.constraintlayout.widget.ConstraintLayout>