<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/lobster"
        android:text="@string/gastrosan"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="163dp"
        android:layout_height="117dp"
        android:src="@drawable/logo_gastrosan"

        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="13dp"
        android:ems="15"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8"
        app:passwordToggleEnabled="true" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mostrar_contrase_a"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:background="@drawable/button_background2"
        android:onClick="mainMenu"
        android:padding="14dp"
        android:text="@string/iniciar_sesiOn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/button2"
        android:layout_width="123dp"
        android:layout_height="112dp"
        android:contentDescription="@string/inicio_de_sesi_n_con_google"
        android:padding="14dp"
        android:src="@drawable/google_logo"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.255"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/aun_no_tienes_cuenta"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.203" />


</androidx.constraintlayout.widget.ConstraintLayout>