<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.dashboard.DashboardFragment" >


    <TextView
        android:id="@+id/textViewProviders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/lista_de_proveedores"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/searchview_background"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProviders"
        style="@style/SearchViewStyle"/>

    <TextView
        android:id="@+id/noProvidersMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/vaya_actualmente_no_tienes_ning_n_proveedor_asociado_a_tu_restaurante_puedes_empezar_a_adiendo_alguno"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ListView
        android:id="@+id/listViewProviders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="115dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewProviders"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/addSupplier"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/add_icon"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/deleteSupplier"
            android:layout_width="48dp"
            android:layout_height="47dp"
            android:layout_marginStart="80dp"
            android:src="@drawable/baseline_delete"
            android:background="@drawable/ripple_effect"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/cancelar2"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/eliminar2"
            android:layout_marginStart="20dp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
